tests/samples/good/write_int.co
fun main() {
  var x = 1;
  write x;
  write 2;
}
