tests/samples/compile_error/statement_block_as_expression.co
fun main() {
  var x = {
    var z = 42;
  }
}
